Wait for the artifact to be uploaded if download fails
Signed-off-by: Miguel Verdaguer Velázquez <verdx@riseup.net>

--- a/.github/workflows/test-install-and-enable-deb.yml
+++ b/.github/workflows/test-install-and-enable-deb.yml
@@ -35,6 +35,11 @@ jobs:
           name: ${{env.PACKAGE_NAME}}
           if_no_artifact_found: fail
 
+      - name: Wait for the artifact to be uploaded
+        if: ${{ always() && steps.download-artifact.outcome == 'failure' }}
+        run: |
+          sleep 60
+
       - name: Retry download if it has failed
         if: ${{ always() && steps.download-artifact.outcome == 'failure' }}
         uses: dawidd6/action-download-artifact@v2
