Add continue_on_error to the install and enable test
Signed-off-by: Miguel Verdaguer Velázquez <verdx@riseup.net>

--- a/.github/workflows/build-deb-packages.yml
+++ b/.github/workflows/build-deb-packages.yml
@@ -18,6 +18,7 @@ jobs:
           - TYPE: manager
             ARCHITECTURE: i386
       fail-fast: false
+      continue-on-error: true
 
     steps:
       - uses: actions/checkout@v3
