--- a/.github/workflows/test-install-and-enable-deb.yml
+++ b/.github/workflows/test-install-and-enable-deb.yml
@@ -17,6 +17,7 @@ jobs:
           - distro_name: 'ubuntu:jammy'
             arch: i386
       fail-fast: false
+      continue-on-error: true
     steps:
       - uses: actions/checkout@v3
 
