--- a/.github/workflows/build-rpm-packages.yml
+++ b/.github/workflows/build-rpm-packages.yml
@@ -19,6 +19,7 @@ jobs:
           - TYPE: manager
             ARCHITECTURE: i386
       fail-fast: false
+      continue-on-error: true
 
     steps:
       - uses: actions/checkout@v3
