Fix cron attribute for Cleaning worfklow runs
Signed-off-by: Miguel Verdaguer Velázquez <verdx@riseup.net>

--- a/.github/workflows/clean-worflow-runs.yml
+++ b/.github/workflows/clean-worflow-runs.yml
@@ -2,7 +2,7 @@ name: Clean workflow runs
 on:
   workflow_dispatch:
   schedule:
-    - cron: '0 0 * * Sunday'
+    - cron: '0 0 * * 7'
 
 jobs:
   Clean-runs:
