Cancel runs of the workflow for previous commits
Signed-off-by: Miguel Verdaguer Velázquez <verdx@riseup.net>

--- a/.github/workflows/upload-rpm-images.yml
+++ b/.github/workflows/upload-rpm-images.yml
@@ -22,6 +22,9 @@ jobs:
         image: [ {CONTAINER_NAME: rpm_builder_x86, DOCKERFILE_PATH: rpms/CentOS/6/x86_64}, {CONTAINER_NAME: rpm_builder_i386, DOCKERFILE_PATH: rpms/CentOS/6/i386}]
       fail-fast: false
     steps:
+
+      - uses: fkirc/skip-duplicate-actions@master
+
       - uses: actions/checkout@v3
 
       - name: Copy build.sh to Dockerfile path
