--- a/.github/workflows/upload-deb-images.yml
+++ b/.github/workflows/upload-deb-images.yml
@@ -22,6 +22,9 @@ jobs:
         image: [ {CONTAINER_NAME: deb_builder_amd64, DOCKERFILE_PATH: debs/Debian/amd64}, {CONTAINER_NAME: deb_builder_i386, DOCKERFILE_PATH: debs/Debian/i386}]
       fail-fast: false
     steps:
+
+      - uses: fkirc/skip-duplicate-actions@master
+
       - uses: actions/checkout@v3
 
       - name: Copy build.sh to Dockerfile path
@@ -29,7 +32,7 @@ jobs:
           cp $GITHUB_WORKSPACE/debs/build.sh $GITHUB_WORKSPACE/${{ matrix.image.DOCKERFILE_PATH }}
 
       - name: Set tag as version
-        run: 
+        run:
           if [ "${{ github.event_name }}" == "pull_request" ]; then echo "TAG=${{ github.head_ref }}" >> $GITHUB_ENV; else echo "TAG=$(sed 's/\([0-9]*\.[0-9]*\)\.[0-9]*/\1/' $GITHUB_WORKSPACE/VERSION)" >> $GITHUB_ENV; fi
 
       - name: Build and push image ${{ matrix.image.CONTAINER_NAME }} with tag ${{ env.TAG }} to Github Container Registry
