--- a/.github/workflows/upload-rpm-images.yml
+++ b/.github/workflows/upload-rpm-images.yml
@@ -23,7 +23,11 @@ jobs:
       fail-fast: false
     steps:
 
-      - uses: fkirc/skip-duplicate-actions@master
+      - name: Cancel previous runs
+        uses: fkirc/skip-duplicate-actions@master
+        with:
+          cancel_others: 'true'
+          github_token: ${{ secrets.GITHUB_TOKEN }}
 
       - uses: actions/checkout@v3
 
