Add workflow name and conclusion to retry of the artifact download
Signed-off-by: Miguel Verdaguer Velázquez <verdx@riseup.net>

--- a/.github/workflows/test-install-and-enable-rpm.yml
+++ b/.github/workflows/test-install-and-enable-rpm.yml
@@ -50,6 +50,8 @@ jobs:
         if: ${{ steps.download-artifact.outcome == 'failure' }}
         uses: dawidd6/action-download-artifact@v2
         with:
+          workflow: build-rpm-packages.yml
+          workflow_conclusion: in_progress
           name: ${{env.PACKAGE_NAME}}
           if_no_artifact_found: fail
 
