Fix to cancel previous runs step
Signed-off-by: Miguel Verdaguer Velázquez <verdx@riseup.net>

--- a/.github/workflows/build-deb-packages.yml
+++ b/.github/workflows/build-deb-packages.yml
@@ -25,6 +25,7 @@ jobs:
         with:
           cancel_others: 'true'
           github_token: ${{ secrets.GITHUB_TOKEN }}
+          skip_after_successful_duplicate: 'false'
 
       - uses: actions/checkout@v3
 
