--- a/.github/workflows/build-rpm-packages.yml
+++ b/.github/workflows/build-rpm-packages.yml
@@ -26,6 +26,7 @@ jobs:
         with:
           cancel_others: 'true'
           github_token: ${{ secrets.GITHUB_TOKEN }}
+          skip_after_successful_duplicate: 'false'
           
       - uses: actions/checkout@v3
 
