Try again the artifact download retry with 240 seconds
Signed-off-by: Miguel Verdaguer Velázquez <verdx@riseup.net>

--- a/.github/workflows/test-install-and-enable-deb.yml
+++ b/.github/workflows/test-install-and-enable-deb.yml
@@ -36,6 +36,19 @@ jobs:
           name: ${{env.PACKAGE_NAME}}
           if_no_artifact_found: fail
 
+      - name: Wait for the artifact to be uploaded
+        if: ${{ steps.download-artifact.outcome == 'failure' }}
+        run: sleep 240
+
+      - name: Retry download if it has failed
+        if: ${{ steps.download-artifact.outcome == 'failure' }}
+        uses: dawidd6/action-download-artifact@v2
+        with:
+          workflow: build-deb-packages.yml
+          workflow_conclusion: in_progress
+          name: ${{env.PACKAGE_NAME}}
+          if_no_artifact_found: fail
+
       - name: Move the Wazuh ${{ matrix.type }} package for ${{ matrix.distro_name }} to the packages directory
         run: |
           mkdir $GITHUB_WORKSPACE/packages
