--- a/.github/workflows/build-rpm-packages.yml
+++ b/.github/workflows/build-rpm-packages.yml
@@ -1,11 +1,15 @@
 name: Build Wazuh Packages - RPM - x86_64 and i386
 on:
+  pull_request:
+    paths:
+      - 'rpms/SPECS/*'
+      - 'rpms/generate_rpm_package.sh'
   workflow_dispatch:
   workflow_call:
 
 
 jobs:
-  Wazuh-agent-rpm-package-builds:
+  Wazuh-agent-rpm-package-build:
     runs-on: ubuntu-latest
     strategy:
       matrix:
@@ -62,8 +66,3 @@ jobs:
           name: ${{ env.PACKAGE_NAME }}
           path: ${{github.workspace}}/rpms/output/${{ env.PACKAGE_NAME }}
           if-no-files-found: error
-
-  Test-install-packages-rpm:
-    needs: Wazuh-agent-rpm-package-builds
-    uses: ./.github/workflows/test-install-and-enable-rpm.yml
-    secrets: inherit
