--- a/.github/workflows/test-install-and-enable-rpm.yml
+++ b/.github/workflows/test-install-and-enable-rpm.yml
@@ -35,6 +35,8 @@ jobs:
           token: ${{ secrets.GITHUB_TOKEN }}
           checkName: Wazuh-agent-rpm-package-build
           ref: ${{ github.event.pull_request.head.sha || github.sha }}
+          interval: 60
+          timeoutSeconds: 7200
 
       - uses: actions/checkout@v3
 
