--- a/.github/workflows/test-install-and-enable-deb.yml
+++ b/.github/workflows/test-install-and-enable-deb.yml
@@ -22,6 +22,13 @@ jobs:
             arch: i386
       fail-fast: false
     steps:
+      - name: Cancel previous runs
+        uses: fkirc/skip-duplicate-actions@master
+        with:
+          cancel_others: 'true'
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          skip_after_successful_duplicate: 'false'
+
       - name: Wait for the package to be built
         uses: fountainhead/action-wait-for-check@v1.1.0
         id: wait-for-build
