--- a/.github/workflows/test-install-and-enable-rpm.yml
+++ b/.github/workflows/test-install-and-enable-rpm.yml
@@ -8,24 +8,9 @@ on:
   workflow_call:
 
 jobs:
-  Test-install-and-enable-rpm-systems:
+  Wait-for-package-building:
     runs-on: ubuntu-latest
     strategy:
-      matrix:
-        system: [
-        {NAME: 'oraclelinux:9', ARCH: "x86_64"},
-        {NAME: 'almalinux:9', ARCH: "x86_64"},
-        {NAME: 'rockylinux:9', ARCH: "x86_64"},
-        {NAME: 'centos:7', ARCH: "x86_64"},
-        {NAME: 'centos:8', ARCH: "x86_64"},
-        {NAME: 'i386/centos:7', ARCH: "i386"},
-        {NAME: 'redhat/ubi8:latest', ARCH: "x86_64"},
-        {NAME: 'redhat/ubi9:latest', ARCH: "x86_64"},
-        {NAME: 'amazonlinux:2', ARCH: "x86_64"}]
-        type: [agent, manager]
-        exclude:
-          - system: {ARCH: "i386"}
-            type: manager
       fail-fast: false
     steps:
       - name: Cancel previous runs
@@ -45,6 +30,27 @@ jobs:
           interval: 60
           timeoutSeconds: 7200
 
+  Test-install-and-enable-rpm-systems:
+    needs: Wait-for-package-building
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        system: [
+        {NAME: 'oraclelinux:9', ARCH: "x86_64"},
+        {NAME: 'almalinux:9', ARCH: "x86_64"},
+        {NAME: 'rockylinux:9', ARCH: "x86_64"},
+        {NAME: 'centos:7', ARCH: "x86_64"},
+        {NAME: 'centos:8', ARCH: "x86_64"},
+        {NAME: 'i386/centos:7', ARCH: "i386"},
+        {NAME: 'redhat/ubi8:latest', ARCH: "x86_64"},
+        {NAME: 'redhat/ubi9:latest', ARCH: "x86_64"},
+        {NAME: 'amazonlinux:2', ARCH: "x86_64"}]
+        type: [agent, manager]
+        exclude:
+          - system: {ARCH: "i386"}
+            type: manager
+      fail-fast: false
+    steps:
       - uses: actions/checkout@v3
 
       - name: Setup directories and variables
