--- a/.github/workflows/test-install-and-enable-deb.yml
+++ b/.github/workflows/test-install-and-enable-deb.yml
@@ -28,7 +28,9 @@ jobs:
           token: ${{ secrets.GITHUB_TOKEN }}
           checkName: Wazuh-agent-deb-package-build
           ref: ${{ github.event.pull_request.head.sha || github.sha }}
-          interval: 60
+          owner: ${{ github.repository_owner }}
+          repository: ${{ github.repository }}
+          intervalSeconds: 60
           timeoutSeconds: 3600
 
   Test-install-and-enable-deb-systems:
@@ -60,7 +62,7 @@ jobs:
         uses: dawidd6/action-download-artifact@v2
         with:
           workflow: build-deb-packages.yml
-          workflow_conclusion: in_progress
+          workflow_conclusion: success
           name: ${{env.PACKAGE_NAME}}
           if_no_artifact_found: fail
 
