--- a/.github/workflows/test-install-and-enable-deb.yml
+++ b/.github/workflows/test-install-and-enable-deb.yml
@@ -22,16 +22,13 @@ jobs:
           skip_after_successful_duplicate: 'false'
 
       - name: Wait for the package to be built
-        uses: fountainhead/action-wait-for-check@v1.1.0
+        uses: ArcticLampyrid/action-wait-for-workflow@v1.0.3
         id: wait-for-build
         with:
-          token: ${{ secrets.GITHUB_TOKEN }}
-          checkName: Wazuh-agent-deb-package-build
-          ref: ${{ github.event.pull_request.head.sha || github.sha }}
-          owner: ${{ github.repository_owner }}
-          repository: ${{ github.repository }}
-          intervalSeconds: 60
-          timeoutSeconds: 3600
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          workflow: build-deb-packages.yml
+          sha: ${{ github.event.pull_request.head.sha || github.sha }}
+          wait-interval: 60
 
   Test-install-and-enable-deb-systems:
     needs: Wait-for-package-building
