--- a/.github/workflows/test-install-and-enable-rpm.yml
+++ b/.github/workflows/test-install-and-enable-rpm.yml
@@ -43,7 +43,8 @@ jobs:
         {NAME: 'i386/centos:7', ARCH: "i386"},
         {NAME: 'redhat/ubi8:latest', ARCH: "x86_64"},
         {NAME: 'redhat/ubi9:latest', ARCH: "x86_64"},
-        {NAME: 'amazonlinux:2', ARCH: "x86_64"}]
+        {NAME: 'amazonlinux:2', ARCH: "x86_64"},
+        {NAME: 'fedora:34', ARCH: "x86_64"}]
         type: [agent, manager]
         exclude:
           - system: {ARCH: "i386"}
