--- a/.github/workflows/upload-deb-images.yml
+++ b/.github/workflows/upload-deb-images.yml
@@ -31,6 +31,18 @@ jobs:
 
       - uses: actions/checkout@v3
 
+      - name: Get changed files
+        uses: dorny/paths-filter@v2
+        id: changes
+        with:
+          filters: |
+            i386:
+              - 'debs/Debian/i386/**'
+              - 'debs/build.sh'
+            amd64:
+              - 'debs/Debian/amd64/**'
+              - 'debs/build.sh'
+
       - name: Copy build.sh to Dockerfile path
         run:
           cp $GITHUB_WORKSPACE/debs/build.sh $GITHUB_WORKSPACE/${{ matrix.image.DOCKERFILE_PATH }}
@@ -40,6 +52,7 @@ jobs:
           if [ "${{ github.event_name }}" == "pull_request" ]; then echo "TAG=${{ github.head_ref }}" >> $GITHUB_ENV; else echo "TAG=$(sed 's/\([0-9]*\.[0-9]*\)\.[0-9]*/\1/' $GITHUB_WORKSPACE/VERSION)" >> $GITHUB_ENV; fi
 
       - name: Build and push image ${{ matrix.image.CONTAINER_NAME }} with tag ${{ env.TAG }} to Github Container Registry
+        if: ( steps.changes.outputs.i386 == 'true' && matrix.CONTAINER_NAME == "deb_builder_i386" ) || ( steps.changes.outputs.amd64 == 'true' && matrix.CONTAINER_NAME == "deb_builder_amd64" )
         run:
           bash $GITHUB_WORKSPACE/.github/actions/ghcr-pull-and-push/build_and_push_image_to_ghcr.sh ${{ secrets.GITHUB_TOKEN }} ${{ github.actor}} ${{matrix.image.CONTAINER_NAME}} ${{ matrix.image.DOCKERFILE_PATH }} ${{ env.TAG }}
 
