--- a/.github/workflows/test-install-and-enable-rpm.yml
+++ b/.github/workflows/test-install-and-enable-rpm.yml
@@ -29,8 +29,27 @@ jobs:
           sha: ${{ github.event.pull_request.head.sha || github.sha }}
           wait-interval: 60
 
+      - name: Get changed files
+        uses: dorny/paths-filter@v2
+        id: changes
+        with:
+          filters: |
+            rpm_images:
+              - 'rpms/CentOS/**'
+              - 'rpms/build.sh'
+            rpm_images_i386:
+              - 'rpms/CentOS/6/i386/**'
+              - 'rpms/build.sh'
+            rpm_images_x86_64:
+              - 'rpms/CentOS/6/x86_64/**'
+              - 'rpms/build.sh'
+            rpm_packages:
+              - 'rpms/SPECS/**'
+              - 'rpms/generate_rpm_package.sh'
+
   Test-install-and-enable-rpm-systems:
     needs: Wait-for-package-building
+    if : steps.changes.outputs.rpm_packages == 'true' || (steps.changes.outputs.rpm_images_i386 == 'true' && matrix.ARCHITECTURE == 'i386') || (steps.changes.outputs.rpm_images_x86_64 == 'true' && matrix.ARCHITECTURE == 'x86_64'
     runs-on: ubuntu-latest
     strategy:
       matrix:
