--- a/stack/dashboard/deb/debian/rules
+++ b/stack/dashboard/deb/debian/rules
@@ -121,7 +121,7 @@ override_dh_fixperms:
 # -----------------------------------------------------------------------------
 
 override_dh_strip:
-	dh_strip --no-automatic-dbgsym
+	dh_strip --no-automatic-dbgsym -XlibGLESv2.so -XlibEGL.so
 
 # -----------------------------------------------------------------------------
 
