--- a/.github/workflows/test-install-and-enable-rpm.yml
+++ b/.github/workflows/test-install-and-enable-rpm.yml
@@ -44,7 +44,10 @@ jobs:
         {NAME: 'redhat/ubi8:latest', ARCH: "x86_64"},
         {NAME: 'redhat/ubi9:latest', ARCH: "x86_64"},
         {NAME: 'amazonlinux:2', ARCH: "x86_64"},
-        {NAME: 'fedora:34', ARCH: "x86_64"}]
+        {NAME: 'fedora:34', ARCH: "x86_64"},
+        {NAME: 'opensuse/leap:latest', ARCH: "x86_64"},
+        {NAME: 'opensuse/tumbleweed:latest', ARCH: "x86_64"},
+        {NAME: '386/opensuse/tumbleweed:latest', ARCH: "i386"}]
         type: [agent, manager]
         exclude:
           - system: {ARCH: "i386"}
