Change name of installation test github action
Signed-off-by: Miguel Verdaguer Velázquez <verdx@riseup.net>

--- a/.github/workflows/test-install-deb.yml
+++ b/.github/workflows/test-install-deb.yml
@@ -1,4 +1,4 @@
-name: Test install and enable Wazuh agent and manager - DEB
+name: Test install Wazuh agent and manager - DEB
 on:
   pull_request:
     paths:
@@ -30,7 +30,7 @@ jobs:
           sha: ${{ github.event.pull_request.head.sha || github.sha }}
           wait-interval: 60
 
-  Test-install-and-enable-deb-systems:
+  Test-install-deb-systems:
     needs: Wait-for-package-building
     runs-on: ubuntu-latest
     strategy:
