Change deb  github actions to detect changes inside debs/SPECS
Signed-off-by: Miguel Verdaguer Velázquez <verdx@riseup.net>

--- a/.github/workflows/build-deb-packages.yml
+++ b/.github/workflows/build-deb-packages.yml
@@ -2,7 +2,7 @@ name: Build Wazuh Packages - DEB - amd64 and i386
 on:
   pull_request:
     paths:
-      - 'debs/SPECS/*'
+      - 'debs/SPECS/**'
       - 'debs/generate_debian_package.sh'
   workflow_dispatch:
   workflow_call:
