--- a/.github/workflows/upload-rpm-images.yml
+++ b/.github/workflows/upload-rpm-images.yml
@@ -48,7 +48,7 @@ jobs:
           if [ "${{ github.event.pull_request.merged }}" == "false" ]; then echo "TAG=${{ github.head_ref }}" >> $GITHUB_ENV; else echo "TAG=$(sed 's/\([0-9]*\.[0-9]*\)\.[0-9]*/\1/' $GITHUB_WORKSPACE/VERSION)" >> $GITHUB_ENV; fi
 
       - name: Build and push image ${{ matrix.image.CONTAINER_NAME }} with tag ${{ env.TAG }} to Github Container Registry
-        if: ( steps.changes.outputs.i386 == 'true' && matrix.CONTAINER_NAME == 'rpm_builder_i386' ) || ( steps.changes.outputs.amd64 == 'true' && matrix.CONTAINER_NAME == 'rpm_builder_x86' )
+        if: ( steps.changes.outputs.i386 == 'true' && matrix.image.CONTAINER_NAME == 'rpm_builder_i386' ) || ( steps.changes.outputs.amd64 == 'true' && matrix.image.CONTAINER_NAME == 'rpm_builder_x86' )
         run:
           bash $GITHUB_WORKSPACE/.github/actions/ghcr-pull-and-push/build_and_push_image_to_ghcr.sh ${{ secrets.GITHUB_TOKEN }} ${{ github.actor}} ${{matrix.image.CONTAINER_NAME}} ${{ matrix.image.DOCKERFILE_PATH }} ${{ env.TAG }}
 
