--- a/stack/dashboard/deb/docker/amd64/Dockerfile
+++ b/stack/dashboard/deb/docker/amd64/Dockerfile
@@ -3,8 +3,8 @@ FROM debian:10
 ENV DEBIAN_FRONTEND noninteractive
 
 # Installing necessary packages
-RUN apt-get update && apt-get install -y apt-utils && \
-    apt-get install -y \
+RUN apt-get update && apt-get install -y --allow-change-held-packages apt-utils && \
+    apt-get install -y --allow-change-held-packages \
     curl sudo wget expect gnupg build-essential \
     devscripts equivs selinux-basics procps gawk
 
