--- a/wpk/common/Dockerfile
+++ b/wpk/common/Dockerfile
@@ -1,7 +1,7 @@
 FROM debian:9
 
 RUN apt-get update && \
-    apt-get -y install python git curl jq python3 python3-pip libffi-dev && \
+    apt-get -y install --allow-change-held-packages python git curl jq python3 python3-pip libffi-dev && \
     pip3 install --upgrade cryptography==2.9.2 awscli
 
 ADD wpkpack.py /usr/local/bin/wpkpack
