Fix offline installation and password tool github action tests to incorporate the use of `-d staging` for the builder.sh
Signed-off-by: Miguel Verdaguer Velázquez <verdx@riseup.net>

--- a/.github/workflows/password-tool.yml
+++ b/.github/workflows/password-tool.yml
@@ -13,8 +13,7 @@ jobs:
         working-directory: ./unattended_installer
         run: |
           bash builder.sh -p
-          bash builder.sh -i -d
-          sed -i 's/pre-release/staging/g' wazuh-install.sh
+          bash builder.sh -i -d staging
         shell: bash 
       - uses: actions/upload-artifact@v3
         with:
