--- a/.github/workflows/offline-installation.yml
+++ b/.github/workflows/offline-installation.yml
@@ -20,9 +20,7 @@ jobs:
       - name: Build wazuh-install script and use pre-release packages
         working-directory: ./unattended_installer
         run: |
-          bash builder.sh -i -d
-          sed -i 's|wazuh_major="4\.5"|wazuh_major="4\.4"|g' wazuh-install.sh
-          sed -i 's|wazuh_version="4\.5\(.*\)"|wazuh_version="4\.4\1"|g' wazuh-install.sh
+          bash builder.sh -i -d staging
 
       - uses: actions/upload-artifact@v3
         with:
